# nomad

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/components/: index.md
docs/config/: index.md
docs/logging/: index.md  log_service.md  log_sinks.md  macros.md  primitives.md
docs/overview/: architecture.md  index.md
docs/time/: index.md  primitives.md  time_service.md
nomad-core/: Cargo.toml  README.md
nomad-core/src/: component.rs  lib.rs  log_macros.rs  logger.rs  time.rs
nomad-core/src/components/: README.md  mod.rs
nomad-core/src/components/log/: mod.rs
nomad-core/src/components/time/: mod.rs
nomad-fsw/: Cargo.toml  README.md  build.rs
nomad-fsw/src/: main.rs
nomad-hal/: Cargo.toml  README.md
nomad-osal/: Cargo.toml  README.md
nomad-osal/src/: lib.rs  logsinks.rs  timesource.rs
