[package]
name = "nomad-fsw"
version = "0.1.0"
edition = "2024"
authors = ["Aeybel Varghese <aeybelvarghese@gmail.com>"]
license = "Apache-2.0"
description = "Nomad Flight Software Project, Reference FSW for the Laika Flight Computer"
repository = "https://github.com/AeybelV/nomad"
readme = "README.md"

[build-dependencies]
chrono = "0.4.42"
